# Mazzarone_Rosadini

./: ActionStrategy.cpp  ActionStrategy.h  AttackStrategy.cpp  AttackStrategy.h  Axe.cpp  Axe.h  Barrel.cpp  Barrel.h  Blaster.cpp  Blaster.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Character.cpp  Character.h  Dwarf.cpp  Dwarf.h  Enemy.cpp  Enemy.h  FemaleWarrior.cpp  FemaleWarrior.h  FightStrategy.cpp  FightStrategy.h  Gladiator.cpp  Gladiator.h  Hammer.cpp  Hammer.h  HealUse.cpp  HealUse.h  Map.cpp  Map.h  MoveStrategy.cpp  MoveStrategy.h  Player1.cpp  Player1.h  Potion.cpp  Potion.h  README.md  RangedAttack.cpp  SpaceCadet.cpp  (+22 more)
cpp/: AdaptHorizontal.cpp  AdaptVertical.cpp  Animation.cpp  AttackStrategy.cpp  Barrel.cpp  Boss.cpp  BossStrategy.cpp  Bullet.cpp  BulletsFactory.cpp  Character.cpp  CharacterFactory.cpp  ElementFactory.cpp  Elements.cpp  Enemy.cpp  Entity.cpp  EntityFactory.cpp  FightStrategy.cpp  Follow.cpp  Gif.cpp  HealUse.cpp  LifeBar.cpp  Map.cpp  MapFactory.cpp  MeleeAttack.cpp  MeleeBossAttack.cpp  MoveStrategy.cpp  ObjectsFactory.cpp  Patrol.cpp  Player1.cpp  PlayersFactory.cpp  Potion.cpp  RangedAttack.cpp  RangedBossAttack.cpp  SpaceCadet.cpp  Stay.cpp  StrengthUse.cpp  Tile.cpp  TrapBarrel.cpp  UseStrategy.cpp  UserInterface.cpp  (+4 more)
header/: AdaptHorizontal.h  AdaptVertical.h  Animation.h  AttackStrategy.h  Barrel.h  Boss.h  BossStrategy.h  Bullet.h  BulletsFactory.h  Character.h  CharacterFactory.h  ElementFactory.h  Elements.h  Enemy.h  Entity.h  EntityFactory.h  Follow.h  Gif.h  HealUse.h  LifeBar.h  Map.h  MapFactory.h  MeleeAttack.h  MeleeBossAttack.h  MoveStrategy.h  ObjectsFactory.h  Observer.h  Patrol.h  Player1.h  PlayersFactory.h  Potion.h  RangedAttack.h  RangedBossAttack.h  SpaceCadet.h  Stay.h  StrengthUse.h  Subject.h  Tile.h  TrapBarrel.h  UseStrategy.h  (+4 more)
test/: BossTest.cpp  BulletTest.cpp  CMakeLists.txt  ChoiceTest.cpp  EnemyTest.cpp  LifeBarTest.cpp  MapTest.cpp  Player1Fixture.cpp  Player1Test.cpp  PotionTest.cpp  TileTest.cpp  matrix1.txt  runAllTests.cpp  shades2.txt
test/lib/googletest/docs/: AdvancedGuide.md  FAQ.md  Primer.md
